# ELang

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  gramm.ar  hello  howtfdoimakeatypesystem.txt  makefile  test.ee
C/: a.out  main.c  mainc.deas.s
chatgpt/: hello.asm  hello.s
src/: CMakeLists.txt  a.out  ast.cpp  ast.hpp  compilationUnit.cpp  compilationUnit.hpp  environment.hpp  lexer.c  lexer.h  main.c  main.cpp  prog.h  states.c  states.h  tokens.c  tokens.cpp  tokens.h  tokens.hpp
src/compiler/: compiler.cpp  compiler.hpp  typeChecker.hpp  types.cpp  types.hpp
src/data/: ast.cpp  ast.hpp  astBuilding.cpp  astBuilding.hpp  operators.hpp  tokens.cpp  tokens.hpp  types.cpp  types.hpp
src/help/: graph.hpp  heap.hpp  variant.hpp  visitor.hpp
src/lexer/: lexer.cpp  lexer.hpp  states.cpp  states.hpp  tokenizer.cpp  tokenizer.hpp
src/parser/: indexer.cpp  indexer.hpp  namespace.hpp  parser.cpp  parser.hpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
test/: .gdb_history  _start  hex  hexas  hexo  hexoas  test.asm  testas  tocompile.elg
